# pecserke_com

./: Cargo.toml  Rocket.toml  Shuttle.toml  readme.md
src/: auth.rs  main.rs
src/handlers/: index.rs  mod.rs  payme.rs  qr.rs  settings.rs  template.rs
templates/: 00_todo_main.html  index.html  qr.html  settings.html
